deployment/1.0.0/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: knufesta2019.com               
    http:
      paths:
      - path: /static                    
        backend:
          serviceName: webserver-service       
          servicePort: 80
      - path: /                 
        backend:
          serviceName: was-service      
          servicePort: 80
